# pyproject.toml
[tool.pytest.ini_options]
testpaths = [
    "tests",
    "tests/sync_tests",
    "tests/integration_sync",
]
pythonpath = ["pysui", "abstracts", "sui","sui/sui_types"]

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysui"

description = "SUI client Python SDK"
requires-python = ">=3.10"
keywords = ["software development kit", "sui", "blockchain"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only"
]
dependencies = [
    "dataclasses_json==0.5.7",
    "pyyaml==6.0",
    "httpx==0.23.0",
    "h2==4.1.0",
    "bip-utils==2.7.0",
    "websockets==10.4",
    "typing_utils==0.1.0",
    "canoser==0.8.2",
    "base58==2.1.1",
    "Deprecated==1.2.13",
    "pyroaring==0.4.2"
]
dynamic = ["version","readme"]


[project.scripts]
wallet = "samples.wallet:main"
async-gas = "samples.async_gas:main"
async-sub = "samples.async_sub:main"
async-sub-txn = "samples.async_sub_txn:main"
keys-to-0210 = "samples.keys_to_0210:main"

[tool.setuptools.packages.find]
# where = ["pysui","samples"]
# include = ["*","abstracts*","sui*"]
exclude = ["out*","temp*","test*","tools*","build*","doc*","pysuienv*","images*"]


[tool.setuptools.dynamic]
version = {attr = "pysui.version.__version__"}
readme = {file = ["README.md"],content-type = "text/markdown"}

[project.urls]
"Bug Reports" = "https://github.com/FrankC01/pysui/issues"
repository = "https://github.com/FrankC01/pysui"
documentation = "https://pysui.readthedocs.io"
