# pyproject.toml
[tool.pytest.ini_options]
testpaths = ["tests", "tests/sync_tests", "tests/integration_sync"]
pythonpath = ["pysui", "abstracts", "sui", "sui/sui_types"]

[build-system]
requires = ["setuptools>=61.0", "wheel","setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pysui"

description = "SUI client Python SDK"
requires-python = ">=3.10"
keywords = ["software development kit", "sui", "blockchain"]
license = { text = "Apache-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "betterproto2 < 1.0.0, >= 0.5.1",
    "dataclasses_json < 0.7.0, >= 0.6.6",
    "PyYAML < 6.2, >= 6.0.1",
    "httpx < 0.28, >=0.27.0",
    "h2 < 5.0, >= 4.1",
    "jsonschema < 4.24, >= 4.23.0",
    "websockets < 13.0.0, >=10.0.0",
    "typing_utils < 0.2.0, >=0.1.0",
    "canoser==0.8.2",
    "base58 < 2.2.0, >=2.1.1",
    "Deprecated < 1.3.0, >=1.2.14",
    "pysui-fastcrypto >= 0.6.0",
    "gql[httpx,websockets] >= 3.5.0",
]

dynamic = ["version", "readme"]


[project.scripts]
wallet = "samples.walletg:main"
async-gas = "samples.async_gasg:main"
sgqls = "samples.sgqls:main"
smash= "samples.smash:main"
splay= "samples.splay:main"
jtobcs="samples.jtobcs:main"
bcstoj="samples.bcstoj:main"
mtobcs="samples.mtobcs:main"

[tool.setuptools.packages.find]


exclude = [
    "out*",
    "temp*",
    "test*",
    "tools*",
    "build*",
    "doc*",
    "pysuienv*",
    "images*",
]


[tool.setuptools.dynamic]
version = { attr = "pysui.version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
mypkg = ["*.json"]

[project.urls]
changelog = "https://github.com/FrankC01/pysui/blob/main/CHANGELOG.md"
repository = "https://github.com/FrankC01/pysui"
issues = "https://github.com/FrankC01/pysui/issues"
documentation = "https://pysui.readthedocs.io"
