# setup.cfg
# Steps... inside repo folder
# For PyPi publishing to production PyPi
# ./bin/publish.sh
# For PyPi publishing to test PyPi
# ./bin/publish.sh test

[metadata]
name = pysui
version = attr: pysui.__version__
author = fastfrank
description = SUI client Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrankC01/pysui
license_files = LICENSE
keywords= software development kit, sui, blockchain
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
requires_python = >=3.10

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    dataclasses_json == 0.5.7
    pyyaml == 6.0
    secp256k1 == 0.14.0
    httpx == 0.23.0
    h2 == 4.1.0
    bip-utils == 2.7.0


[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*
    temp.py
	*.tests
	*.tests.*
	tools*
    bin*

[options.entry_points]
console_scripts =
    wallet = samples.wallet:main

[project_urls]
"Bug Tracker" = https://github.com/FrankC01/pysui/issues