# setup.cfg


[metadata]
name = pysui
version = attr: pysui.__version__
author = fastfrank
description = SUI client Python SDK
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrankC01/pysui
license_files = LICENSE
keywords= software development kit, sui, blockchain
classifiers=
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
requires_python = >=3.10

[options]
packages = find:
zip_safe = True
install_requires =
    dataclasses_json == 0.5.7
    pyyaml == 6.0
    secp256k1 == 0.14.0
    httpx == 0.23.0
    h2 == 4.1.0
    bip-utils == 2.7.0
    websockets == 10.4


[options.packages.find]
exclude =
    temp*
    test*
	tools*

[options.entry_points]
console_scripts =
    wallet = samples.wallet:main
    async-gas = samples.async_gas:main
    async-sub = samples.async_sub:main
    keys-to-0210 = samples.keys_to_0210:main

[project.urls]
"Documentation" = "https://pysui.readthedocs.io"
"Bug Reports" = "https://github.com/FrankC01/pysui/issues"